Add pwa support; start work on add collection page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,1 +1,18 @@
-{}
+{
+  "MENUS": {
+    "ADD_NEW_COLLECTION": "Add new collection",
+    "COLLECTIONS": "Collections"
+  },
+  "COLLECTIONS": {
+    "FORM": {
+      "TITLES": {
+        "CREATE": "",
+        "EDIT": "",
+        "VIEW": ""
+      },
+      "FIELDS": {
+        "NAME": ""
+      }
+    }
+  }
+}
