Add initial image picker type

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -9,7 +9,8 @@
     "SUBMIT": "Enviar",
     "SURE_DELETE": "Esborrar?",
     "DELETE": "Esborrar",
-    "CANCEL": "Cancelar"
+    "CANCEL": "Cancelar",
+    "PICK_IMAGE": "Seleccionar imatge"
   },
   "COLLECTIONS": {
     "FORM": {
