--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,7 +9,8 @@
     "SUBMIT": "Enviar",
     "SURE_DELETE": "¿Borrar?",
     "DELETE": "Borrar",
-    "CANCEL": "Cancelar"
+    "CANCEL": "Cancelar",
+    "PICK_IMAGE": "Seleccionar imagen"
   },
   "COLLECTIONS": {
     "FORM": {
