Add series form v2 with picture picker

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -39,7 +39,8 @@
         "VIEW": "Veure serie"
       },
       "FIELDS": {
-        "NAME": "Nom"
+        "NAME": "Nom",
+        "PICTURE": "Imatge"
       }
     },
     "LIST": {
