--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -39,7 +39,8 @@
         "VIEW": "View series"
       },
       "FIELDS": {
-        "NAME": "Name"
+        "NAME": "Name",
+        "PICTURE": "Image"
       }
     },
     "LIST": {
