--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -10,7 +10,10 @@
     "SURE_DELETE": "Esborrar?",
     "DELETE": "Esborrar",
     "CANCEL": "Cancelar",
-    "PICK_IMAGE": "Seleccionar imatge"
+    "PICK_IMAGE": "Seleccionar imatge",
+    "EDIT": "Editar",
+    "ACTIONS": "Accións",
+    "VIEW": "Veure"
   },
   "COLLECTIONS": {
     "FORM": {
@@ -46,7 +49,8 @@
     "LIST": {
       "TITLE": "Serie",
       "GO_TO_SERIES": "Anar a la serie",
-      "VOLUME_AMOUNT": "Volums: {{amount}}"
+      "VOLUME_AMOUNT": "Volums: {{amount}}",
+      "DELETE_SERIES": "Estás segur que vols esborrar la serie?"
     }
   }
 }
