--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,7 +10,10 @@
     "SURE_DELETE": "Delete?",
     "DELETE": "Delete",
     "CANCEL": "Cancel",
-    "PICK_IMAGE": "Pick picture"
+    "PICK_IMAGE": "Pick picture",
+    "EDIT": "Edit",
+    "ACTIONS": "Actions",
+    "VIEW": "View"
   },
   "COLLECTIONS": {
     "FORM": {
@@ -46,7 +49,8 @@
     "LIST": {
       "TITLE": "Series",
       "GO_TO_SERIES": "Go to series",
-      "VOLUME_AMOUNT": "Volumes: {{amount}}"
+      "VOLUME_AMOUNT": "Volumes: {{amount}}",
+      "DELETE_SERIES": "Are you sure you want to delete de series?"
     }
   }
 }
