--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -64,7 +64,8 @@
         "VOLUME_NUMBER": "Numero",
         "PRICE": "Preu",
         "PICTURE": "Imatge",
-        "NAME": "Nom"
+        "NAME": "Nom",
+        "QUANTITY": "Quantitat"
       }
     },
     "LIST": {
@@ -72,7 +73,8 @@
       "FIELDS": {
         "NAME": "Nom",
         "VOLUME_NUMBER": "Numero",
-        "PRICE": "Preu"
+        "PRICE": "Preu",
+        "QUANTITY": "Quantitat"
       }
     }
   }
