Settings page initial setup Export database to json Write file to filesystem Button groups

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -15,7 +15,8 @@
     "EDIT": "Editar",
     "ACTIONS": "Accións",
     "VIEW": "Veure",
-    "PICTURES": "Imatges"
+    "PICTURES": "Imatges",
+    "EXIT": "Eixir"
   },
   "COLLECTIONS": {
     "FORM": {
