--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,8 @@
     "EDIT": "Edit",
     "ACTIONS": "Actions",
     "VIEW": "View",
-    "PICTURES": "Pictures"
+    "PICTURES": "Pictures",
+    "EXIT": "Exit"
   },
   "COLLECTIONS": {
     "FORM": {
