--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -15,7 +15,8 @@
     "EDIT": "Editar",
     "ACTIONS": "Acciones",
     "VIEW": "Ver",
-    "PICTURES": "Imágenes"
+    "PICTURES": "Imágenes",
+    "EXIT": "Salir"
   },
   "COLLECTIONS": {
     "FORM": {
