Add settings translations Save settings Load settings Set saved lang Format

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -80,5 +80,15 @@
         "QUANTITY": "Quantity"
       }
     }
+  },
+  "SETTINGS": {
+    "TITLE": "Settings",
+    "FORM": {
+      "LANG": "Language"
+    },
+    "BUTTONS": {
+      "CREATE_BACKUP": "Create backup",
+      "IMPORT_BACKUP": "Import backup"
+    }
   }
 }
