--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -80,5 +80,15 @@
         "QUANTITY": "Cantidad"
       }
     }
+  },
+  "SETTINGS": {
+    "TITLE": "Ajustes",
+    "FORM": {
+      "LANG": "Idioma"
+    },
+    "BUTTONS": {
+      "CREATE_BACKUP": "Crear copia de seguridad",
+      "IMPORT_BACKUP": "Importar copia de seguridad"
+    }
   }
 }
