--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -80,5 +80,15 @@
         "QUANTITY": "Quantitat"
       }
     }
+  },
+  "SETTINGS": {
+    "TITLE": "Configuració",
+    "FORM": {
+      "LANG": "Idioma"
+    },
+    "BUTTONS": {
+      "CREATE_BACKUP": "Crear copia de seguretat",
+      "IMPORT_BACKUP": "Importar copia de seguretat"
+    }
   }
 }
